[project]
name = "finance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "litestar[sqlalchemy,standard]>=2.15.1",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]
